@@ -25,6 +25,7 @@ DDD 3.0 [in development]
     - Improved help system: In accordance with the Motif style guide,
       F1 invokes help on the item pointed at, while Shift+F1 lets you
       choose an item.
+    - Tips of the day.  Upon startup, DDD shows a useful hint for DDD usage.
     - Value tips and selections now work for struct members, too: you
       can point at `A.B' or `A->B' and get the current value.
     - The maximum number of glyphs is now configurable at startup time.
